coder/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workspaces
  labels:
      pod-security.kubernetes.io/enforce: baseline
