coder/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coder
  namespace: coder
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    # external-dns.alpha.kubernetes.io/hostname: coder.think-ahead.dev
spec:
  tls:
    - hosts:
        - coder.think-ahead.dev
      secretName: coder-tls-secret
  ingressClassName: nginx
  rules:
  - host: coder.think-ahead.dev # Note: this MUST be set
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: coder
            port:
              name: http
              # number: 80
